--- a/SmartOp-Angular/src/index.html
+++ b/SmartOp-Angular/src/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>SmartOpAngular</title>
+  <title>Smart-Op Datatable Test</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <!-- <link rel="icon" type="image/x-icon" href="favicon.ico"> -->
+  <link rel="icon" href="//img1.wsimg.com/isteam/ip/fe2658ba-5b10-48b3-bc3e-a65292d92361/favicon/6d54797e-e3dd-4582-91f3-20e1c2be037d.png/:/rs=w:16,h:16,m" sizes="16x16"/>
 
 </head>
 <body>
